--- a/index.html
+++ b/index.html
@@ -3,57 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Arweave Content Loader</title>
+  <title>Arweave Content Viewer</title>
+  <style>
+    /* iframe 的样式 */
+    #arweaveContent {
+      width: 100%;
+      height: 100vh; /* 全屏显示 */
+      border: none; /* 移除边框 */
+    }
+  </style>
 </head>
 <body>
-  <div id="content">
-    <p>Loading content...</p>
-  </div>
 
-  <script>
-    // 获取URL hash
-    function getHashFromURL() {
-      const path = window.location.pathname;
-      return path.split("/")[1];
-    }
+<div id="content">
+  <p>Loading content...</p>
+</div>
 
-    // 通过Arweave网关获取内容
-    async function loadArweaveContent(hash) {
-      try {
-        const response = await fetch(`https://arweave.4everland.xyz/${hash}`, {
-          method: "GET",
-          headers: {
-            "Accept": "text/html", // 设置为接收HTML内容
-          },
-          mode: "cors" // 使用CORS模式
-        });
+<script>
+  // 从URL中提取hash
+  function getHashFromURL() {
+    const path = window.location.pathname;
+    return path.split("/")[1]; // 假设格式为 /arhash
+  }
 
-        // 检查响应状态
-        if (!response.ok) {
-          throw new Error(`Content not found: ${response.statusText}`);
-        }
-
-        const contentType = response.headers.get("Content-Type");
-
-        // 根据内容类型决定如何显示内容
-        if (contentType && contentType.includes("text/html")) {
-          const htmlContent = await response.text();
-          document.getElementById("content").innerHTML = htmlContent;
-        } else {
-          document.getElementById("content").textContent = "Unsupported content type.";
-        }
-      } catch (error) {
-        document.getElementById("content").textContent = `Error loading content: ${error.message}`;
-      }
-    }
-
-    // 执行加载过程
-    const arHash = getHashFromURL();
-    if (arHash) {
-      loadArweaveContent(arHash);
+  // 动态加载iframe
+  function loadArweaveContent(hash) {
+    // 检查hash是否存在
+    if (hash) {
+      // 创建iframe元素
+      const iframe = document.createElement("iframe");
+      iframe.id = "arweaveContent";
+      iframe.src = `https://arweave.4everland.xyz/${hash}`; // 组合成正确的网关URL
+      
+      // 清空内容容器并插入iframe
+      const contentDiv = document.getElementById("content");
+      contentDiv.innerHTML = ""; // 清空加载提示
+      contentDiv.appendChild(iframe);
     } else {
       document.getElementById("content").textContent = "No content hash provided in URL.";
     }
-  </script>
+  }
+
+  // 获取hash并加载内容
+  const arHash = getHashFromURL();
+  loadArweaveContent(arHash);
+</script>
+
 </body>
 </html>
